<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Projectpandi</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="etPassword">..............</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="password">..............</string>
    <string name="password1">Password :</string>
    <string name="username">username</string>
    <string name="nama">Nama :</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="nama1">Nama :</string>
    <string name="login">LOGIN</string>
    <string name="username1">username</string>
    <string name="etpassword">Password :</string>
    <string name="buat_akun">Buat Akun ?</string>
    <string name="etpassword1">..........</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="welcome_to_register">Welcome To Register</string>
    <string name="us">...</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="bayar">BAYAR</string>
    <string name="tanggal">Tanggal :</string>
    <string name="nominal">Nominal :</string>
    <string name="nis">NIS :</string>
    <string name="kelas">Kelas :</string>
    <string name="nama_lengkap">Nama Lengkap :</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="nominal1">Nominal</string>
    <string name="tanggal1">Tanggal</string>
    <string name="kelas1">Kelas</string>
    <string name="nis1">Nis</string>
    <string name="nama_lengkap1">Nama Lengkap</string>
    <string name="username2">...</string>
    <string name="form_pendaftaran_program_belajar">FORM PENDAFTARAN PROGRAM BELAJAR</string>
    <string name="agama">Agama</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>

    <string-array name="agama">
        <item>Islam</item>
        <item>Protestan</item>
        <item>Katolik</item>
        <item>Hindu</item>
        <item>Buddha</item>
        <item>Konghucu</item>
    </string-array>

    <string-array name="programbelajar">
        <item>PAUD (60 Orang)</item>
        <item>Paket A (60 Orang)</item>
        <item>Paket B (60 Orang)</item>
        <item>Paket C (60 Orang)</item>
        <item>Les Jahit (11 Orang)</item>
        <item>Les Komputer (15 Orang)</item>
    </string-array>
</resources>