<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bayar2">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="488dp"
        android:layout_height="873dp"
        android:contentDescription="@string/todo15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back7"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="331dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/acme"
        android:text="PEMBAYARAN MASUK PAUD"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <EditText
            android:id="@+id/salin"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="410601016905537 (BRI) A/N Sanggar Kegiatan Belajar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlCompat,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnsalin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:scaleType="center"
            app:srcCompat="?attr/actionModeCopyDrawable"
            tools:ignore="DuplicateIds,TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/teal_700"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/teal_700"
            app:endIconTint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:startIconTint="@color/teal_700">

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/nama_lengkap"
                android:textColor="#035560"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/teal_700"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/teal_700"
            app:endIconTint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:startIconTint="@color/teal_700">

            <EditText
                android:id="@+id/namaortu"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="Nama Orangtua"
                android:textColor="#035560"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/teal_700"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/teal_700"
            app:endIconTint="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:startIconTint="@color/teal_700">

            <EditText
                android:id="@+id/kelas"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/kelas"
                android:inputType="text"
                android:textColor="#035560"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00FFFFFF"
            android:focusable="false"
            android:hint="@string/tanggal"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_700" />

        <EditText
            android:id="@+id/nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nominal"
            android:inputType="number"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_700"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bukti Pembayaran :"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/uploadpendaftaran"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#E4ACAAAA"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/camera" />

        <Button
            android:id="@+id/btntransaksi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#035560"
            android:text="@string/bayar"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:iconTint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>