<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="538dp"
        android:layout_height="866dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/judul" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/judul2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/register"
        android:textColor="#5A0202"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/back3"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="315dp"
        android:backgroundTint="#035560"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#035560"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/btnregister" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="294dp"
        android:layout_height="317dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="#035560"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#035560"
            android:textColorHint="@color/teal_700"
            tools:ignore="MissingClass" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email :"
            android:textColor="#035560"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#035560"
            android:textColorHint="@color/teal_700"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/et_Password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password1"
            android:textColor="#035560"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="........"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#035560"
            android:textColorHint="@color/teal_700"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="#035560"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/confirpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="........"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#035560"
            android:textColorHint="@color/teal_700"
            tools:ignore="DuplicateIds,TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>